# obsidian-semantic-search

./: .gitignore  README.md  pyproject.toml
src/obsidian_semantic/: __init__.py  chunker.py  cli.py  config.py  db.py  indexer.py  links.py
src/obsidian_semantic/embedder/: __init__.py  base.py  gemini.py  ollama.py
tests/: test_chunker.py  test_cli.py  test_config.py  test_db.py  test_embedder.py  test_indexer.py  test_links.py  test_search_quality.py
